# pitfall

./: .gitignore  Makefile  pyproject.toml  setup.cfg
.github/workflows/: install-test.yml
e2e/aws/s3/: __main__.py  test.py
e2e/aws/vpc/: __main__.py  componentresource.py  test.py
e2e/localstack/s3/: __main__.py  test.py
pitfall/: __init__.py  actions.py  config.py  core.py  exceptions.py  project.py  stack.py  state.py  utils.py
pitfall/helpers/aws/: iam.py  utils.py
tests/: test_actions.py  test_config.py  test_core.py  test_plugins.py  test_project.py  test_stack.py  test_state.py  test_utils.py
tests/helpers/aws/: test_iam.py  test_utils.py
