[tool.poetry]
name = "pitfall"
version = "0.0.4"
description = "An integration testing framework for Pulumi Infrastructure as Code"
authors = ["bincyber <byncyber@users.noreply.github.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
anytree = "^2.12.1"
boto3 = "^1.34.4"
pycryptodomex = "^3.19.0"
PyYAML = "^6.0.1"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.6"
coveralls = "^3.3.1"
flake8 = "^6.1.0"
ipython = "^8.18.1"
moto = "^4.2.12"
mypy = "^1.7.1"
netaddr = "^0.9.0"
nose2 = "^0.14.0"
pulumi = "^3.98.0"
pulumi-aws = "^6.15.0"
requests = "^2.31.0"
setuptools = "^69.0.2"
toml = "^0.10.2"
twine = "^4.0.2"
wheel = "^0.42.0"

[tool.coverage]
always-on = true
coverage-report = "html"

[tool.coverage.run]
source = ["./pit/"]
omit = ["setup.py", "e2e/*", "examples/*", "tests/*"]

[tool.coverage.report]
precision = 2
sort = "Cover"

[tool.coverage.html]
directory = "./htmlcov"
title = "PIT Coverage Report"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[tool.ruff]
target-version = "py39"
line-length = 120
extend-select = ["I"]

[tool.ruff.isort]
known-first-party = ["pitfall"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
